--- a/styles/project.less
+++ b/styles/project.less
@@ -1,8 +1,10 @@
 #elm-project-dialog {
-    input{
+    #dependencies, #availiable{
+        input{
         width: auto;
-    }
-    select{
-        width: auto;
+        }
+        select{
+            width: auto;
+        }
     }
 }
